# tauri-shadcn

./: .gitignore  .npmrc  README.md  biome.json  biome.origin.json  eslint.config.cjs  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.json  vite.config.ts
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependabot-automerge.yml  lint-rs.yml  release.yml  test-js.yml
.husky/: pre-commit  pre-push
src/: App.tsx  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: icons.tsx  menu-mode-toggle.tsx  tailwind-indicator.tsx  theme-provider.tsx  window-titlebar.tsx
src/components/ui/: alert-dialog.tsx  button-group.tsx  calendar.tsx  carousel.tsx  chart.tsx  command.tsx  field.tsx  form.tsx  input-group.tsx  item.tsx  pagination.tsx  resizable.tsx  select.tsx  sidebar.tsx  toast.tsx  toggle-group.tsx  use-toast.ts
src/dashboard/: layout.tsx  page.tsx
src/dashboard/components/: date-range-picker.tsx  main-nav.tsx  overview.tsx  recent-sales.tsx  team-switcher.tsx  user-nav.tsx
src/dashboard/pages/: customers.tsx  products.tsx  settings.tsx
src/lib/: utils.test.ts
src/routes/: __root.tsx  custom.tsx  index.tsx  products.tsx  settings.tsx
src/routes/dashboard/: index.tsx
src/styles/: globals.css
