[package]
name = "tauri-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["SuperWindCloud"]
license = "MIT"
repository = ""
edition = "2021"


[lib]
name = "tauri_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]



[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "config-json5"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"



